The topic of history was integrated, story.js was created and memory-game.js was edited

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles.css">
   <script type="module" src="js/mathe.js"></script>
   <script type="module" src="js/deutsch.js"></script>
+  <script type="module" src="js/geschichte.js"></script>
   <script type="module" src="js/memory-game.js"></script>
 </head>
 <body>
