Errors in the individual files have been fixed, the game logic has been revised, functions for saving the game status have been prepared
Pop-up has been added and buttons for a new game and for saving and starting a new game

The math tasks have been slightly revised, the style.css has been adapted to the new requirements

--- a/index.html
+++ b/index.html
@@ -33,17 +33,22 @@
         <option value="geschichte">Geschichte</option>
         <option value="allgemeinwissen">Allgemeinwissen</option>
       </select>
-    </div>
+    </section>
 
-    <div id="game-board"></div>
+    <section id="game-board" class="game-board"></section>
 
-    <div id="stats">
-      <p>Zeit: <span id="time">0</span> Sekunden</p>
-      <p>Versuche: <span id="tries">0</span></p>
-    </div>
-    <div id="controls">
-      <button id="pause">Pause</button>
-      <button id="start" disabled>Start</button>
-    </div>
-  </div>
-  <script src="memory-game.js"></script>
+    <section class="game-info">
+        <p>Zeit: <span id="time">0</span> Sekunden</p>
+        <p>Versuche: <span id="tries">0</span></p>
+        <button id="pause">Pause</button>
+        <button id="start" disabled>Start</button>
+    </section>
+    
+<footer>
+    <tr>
+      <td><p>&copy; 2024 Want2Lern</p></td>
+      <td><script type="text/javascript" src="https://freehitcounters.org/count/gum1"></script></td>
+    </tr>
+</footer>
+</body>
+</html>
