--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script type="module" src="js/deutsch.js"></script>
   <script type="module" src="js/geschichte.js"></script>
   <script type="module" src="js/memory-game.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+
 </head>
 <body>
   <div id="game-container">
